test/spec_vectors/load/fail/module_15.wat
(module (memory 1) (func $load8_s_i32 (i32.load8_s (i32.const 0))))